--- a/nexus-pwa/package.json
+++ b/nexus-pwa/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.5.0",
     "socket.io-client": "^4.7.2",
     "idb": "^7.1.1",
-    "@supabase/supabase-js": "^2.38.0"
+    "@supabase/supabase-js": "^2.38.0",
+    "vite": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -26,7 +27,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5",
     "vite-plugin-pwa": "^0.16.5"
   }
 }
