--- a/nexus-pwa/package.json
+++ b/nexus-pwa/package.json
@@ -17,16 +17,16 @@
     "socket.io-client": "^4.7.2",
     "idb": "^7.1.1",
     "@supabase/supabase-js": "^2.38.0",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "@vitejs/plugin-react": "^4.0.3",
+    "vite-plugin-pwa": "^0.16.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "vite-plugin-pwa": "^0.16.5"
+    "eslint-plugin-react-refresh": "^0.4.3"
   }
 }
